   src/pluginutils.c, doc/plugins.dox:
   Improve API docs contents page by listing all commonly-used files.
   Fix 'Date' appearing twice on the date line.
   Don't generate API docs for prefs.h, toolbar.h (unused).
   Move some '@file' doc-comments to the .c file.
 * src/interface.c, geany.glade:
   Add frame for 'Printing' prefs dialog page.


2010-03-17  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * tagmanager/python.c:
   Apply patch from Colomban Wendling to parse Python lambda functions
   (thanks) - modified to only parse toplevel or class member lambdas.
 * src/stash.c, src/stash.h, doc/Doxyfile.in, doc/Makefile.am,
   doc/stash-example.c:
   Add doc-comments for Stash setting functions.
   Add an example file showing usage of Stash.
   (Not enabled yet until added to the plugin API).


2010-03-17  Lex Trotman  <elextr.at.gmail.dot.com>

 * src/build.c:
   Fix using return value without checking return status, caused
   incorrect sensitivity settings on build dialog.


2010-03-16  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * HACKING:
   Add tip about gcc optimization & warnings/debugging.
   Add Testing section.
   Update Libraries section about synchronizing with other projects.


2010-03-15  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/ui_utils.c:
   For now revert the recent patch which set real_path of newly
   open non-existent configuration files as this seems hackish and
   causes 'file not found' warnings.
 * wscript:
   Fix/Improve GIT repository detection
   (patch by Thomas Martitz, thanks).
 * plugins/geanyfunctions.h, src/plugindata.h, src/plugins.c,
   src/utils.c:
   Add utils_copy_environment() to the plugin API.


2010-03-15  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/utils.c, src/utils.h, src/sciwrappers.c, src/dialogs.c,
   src/navqueue.c, src/msgwindow.c, src/filetypes.c, src/document.c,
   src/main.c:
   Use 3rd person for more API dox.